--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,9 +9,9 @@
     "build": "tsc",
     "test": "vitest",
     "docker:build": "cd ../.. && docker build --tag rolebase-backend -f packages/backend/Dockerfile .",
-    "docker:run": "docker run -p 8888:8888 -d rolebase-backend",
+    "docker:run": "docker run -p 8888:8888 --env-file ../../.secrets --add-host=host.docker.internal:host-gateway --add-host=local.auth.nhost.run:host-gateway --add-host=local.db.nhost.run:host-gateway --add-host=local.functions.nhost.run:host-gateway --add-host=local.graphql.nhost.run:host-gateway --add-host=local.hasura.nhost.run:host-gateway --add-host=local.storage.nhost.run:host-gateway -d rolebase-backend",
     "docker:inspect": "docker run --rm -it rolebase-backend /bin/sh",
-    "docker:deploy": "cd ../.. && docker buildx build -f packages/backend/Dockerfile --push --platform linux/amd64,linux/arm64 -t registry.eu-central-1.nhost.run/94212868-126b-47d0-bc96-4a9ac670c2ea:1.0.3 .",
+    "docker:deploy": "cd ../.. && docker buildx build -f packages/backend/Dockerfile --push --platform linux/amd64,linux/arm64 -t registry.eu-central-1.nhost.run/94212868-126b-47d0-bc96-4a9ac670c2ea:1.0.10 .",
     "nhost:config:validate": "cd ../.. && nhost run config-validate --config packages/backend/nhost-service.toml --service-id 94212868-126b-47d0-bc96-4a9ac670c2ea",
     "nhost:config:pull": "cd ../.. && nhost run config-pull --config packages/backend/nhost-service.toml --service-id 94212868-126b-47d0-bc96-4a9ac670c2ea",
     "nhost:config:deploy": "cd ../.. && nhost run config-deploy --config packages/backend/nhost-service.toml --service-id 94212868-126b-47d0-bc96-4a9ac670c2ea"
@@ -40,7 +40,6 @@
     "node-html-markdown": "^1.3.0",
     "node-mailjet": "^5.1.1",
     "openai": "^3.3.0",
-    "react": "^18.2.0",
     "rrule": "^2.8.1",
     "slugify": "^1.6.6",
     "stripe": "^11.7.0",
