--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:21.6.2-alpine
+FROM node:20-alpine
 
 WORKDIR /app
 
@@ -8,7 +8,10 @@ COPY ../../packages/backend/package.json ./packages/backend/
 COPY ../../packages/shared/package.json ./packages/shared/
 COPY ../../packages/emails/package.json ./packages/emails/
 
-RUN npm install --max-old-space-size=2048
+ENV NODE_OPTIONS=--max-old-space-size=2048
+ENV GENERATE_SOURCEMAP=false
+
+RUN npm install
 
 COPY ../.. .
 
