--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -18,6 +18,8 @@
     "@apollo/client": "^3.9.11",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/montserrat": "^4.5.10",
@@ -52,6 +54,7 @@
     "diff": "^5.0.0",
     "downshift": "^6.1.7",
     "easy-peasy": "^5.2.0",
+    "emoji-mart": "^5.6.0",
     "eventemitter3": "^5.0.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.12.14",
