--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
       "cache": false,
       "persistent": true
     },
-    "build": {
+    "@rolebase/webapp#build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
