--- a/nhost/metadata/databases/default/tables/auth_users.yaml
+++ b/nhost/metadata/databases/default/tables/auth_users.yaml
@@ -167,6 +167,7 @@ update_permissions:
         - display_name
         - locale
         - metadata
+        - phone_number
       filter:
         id:
           _eq: X-Hasura-User-Id
