Upgrade Nhost SDK

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -35,8 +35,7 @@
     "@lexical/headless": "^0.9.1",
     "@lexical/markdown": "^0.9.1",
     "@lexical/react": "^0.9.1",
-    "@nhost/react": "^3.11.0",
-    "@nhost/react-apollo": "^18.0.0",
+    "@nhost/nhost-js": "^4.2.0",
     "@sentry/react": "^7.79.0",
     "@sentry/vite-plugin": "^2.9.0",
     "@stripe/react-stripe-js": "^1.16.4",
