--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,7 +22,7 @@
     "@nhost/nhost-js": "^4.2.0",
     "@sentry/node": "^7.79.0",
     "@sentry/profiling-node": "^1.2.6",
-    "@trpc/server": "^11.0.0-next-beta.294",
+    "@trpc/server": "^11.7.2",
     "algoliasearch": "^4.14.2",
     "axios": "^1.5.1",
     "date-fns": "^2.29.3",
