--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -41,7 +41,7 @@
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-table": "^8.7.9",
-    "@trpc/client": "^11.0.0-next-beta.294",
+    "@trpc/client": "^11.7.2",
     "algoliasearch": "^4.14.2",
     "crisp-sdk-web": "^1.0.18",
     "crypto-hash": "^2.0.1",
