--- a/nhost/metadata/databases/default/tables/public_org_subscription.yaml
+++ b/nhost/metadata/databases/default/tables/public_org_subscription.yaml
@@ -9,13 +9,14 @@ select_permissions:
   - role: user
     permission:
       columns:
+        - status
+        - stripeCustomerId
+        - stripeSubscriptionId
+        - type
         - id
         - orgId
       filter:
         org:
           members:
-            _and:
-              - userId:
-                  _eq: X-Hasura-User-Id
-              - role:
-                  _eq: Owner
+            userId:
+              _eq: X-Hasura-User-Id
