Update Sentry with hosted Sentry instance

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -36,8 +36,8 @@
     "@lexical/markdown": "^0.9.1",
     "@lexical/react": "^0.9.1",
     "@nhost/nhost-js": "^4.2.0",
-    "@sentry/react": "^7.79.0",
-    "@sentry/vite-plugin": "^2.9.0",
+    "@sentry/react": "10.38.0",
+    "@sentry/vite-plugin": "^4.9.0",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-table": "^8.7.9",
